--- a/src/App.css
+++ b/src/App.css
@@ -1,100 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.Containers {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-.ItemContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border-style:solid;
-  border-color: black;
-  width:100%
-
-}
-.item {
-  border: 1px solid;
-  border-radius: 16px;
-}
-.modal{
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0,0,0,0.5);
-}
-.modal-content{
-  
-  background-color: white;
-}
-.moda-header{
-
-  padding: 10px;
-}
-.modal-body{
-  display: flex;
-  flex-direction: column;
-  justify-content:space-around;
-  padding: 10px;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
-}
-.name, .category-options, .color-options{
-  padding-left: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;  
-}
-.close-btn{
-  position: relative;
-	width: 23px;
-	height: 23px;
-	border: 2px solid #eef5df;
-	background-color: #ff5248;
-	border-radius: 50%;
-  right: -140px;
-  top: -80px;
+body > #root > div {
+  height: 100vh;
 }
